#17 project verification via email